<resources>
    <string name="app_name">AyoEats</string>
    <string name="button_add_MealLocation"> Add Meal Location</string>
    <string name="hint_mealName">Meal Name</string>
    <string name="hint_mealDescription">Meal Description</string>
    <string name="hint_mealPrice">Meal Price</string>
    <string name="hint_mealRating">Rate the Meal out of 5</string>
    <string name="textview_rate_label">Current Rating</string>
    <string name="textview_rating_progress">0 Stars</string>
    <string name="menu_addMealLocation">Add</string>
    <string name="menu_cancelMealLocation">Cancel</string>
    <string name="enter_mealLocation_mealName">Please Enter a Meal Name</string>
    <string name="save_meal_location">Save Meal Location</string>
    <string name="button_addImage">Add Meal Image </string>
    <string name="select_mealLocation_image">Select Meal  Image</string>
    <string name="change_mealLocation_image"> Change Meal Image</string>
    <string name="button_location_map">Pick Location on Map</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="menu_deleteMealLocation">Delete</string>
    <string name="title_activity_meal_location_maps">Map of All Meal Locations</string>
    <string name="hint_email">Enter your email </string>
    <string name="hint_password">Enter your password</string>
    <string name="button_login">Login</string>
    <string name="link_to_signUp">Don\'t have an account yet? Signup here</string>
    <string name="link_to_Login">Already have an account yet? Login here</string>
    <string name="hint_firstname">Firstname</string>
    <string name="hint_surname">Surname</string>
    <string name="button_signup">Signup</string>
    <string name="fill_all_fields">You need to fill all fields to proceed</string>
    <string name="wrong_password">Wrong Password Entered</string>
    <string name="user_not_found">Sorry No user exists for that email address</string>
    <string name="Logout">Logout</string>
    <string name="Welcome_Signup">Welcome to AyoEats! \n Please fill in the details below to create an account </string>
    <string name="Welcome_Login">Welcome to AyoEats! \n Please enter your email and password to access your account </string>
    <string name="Welcome_Firstname">Welcome User</string>
    <string name="Meal_Location_Address_Label"> Meal Location Address: </string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>



</resources>